src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_enable_in_string_does_not_close.snap
---
source: src/regression_tests/format.rs
description: "{\n/*nixfmt:disable*/\n  a = ''\n/*nixfmt:enable*/\n  '';\n/*nixfmt:enable*/\n  b   =   1;\n}\n"
---
{
/*nixfmt:disable*/
  a = ''
/*nixfmt:enable*/
  '';
/*nixfmt:enable*/
  b = 1;
}
