src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_in_priority_group_post_segment.snap
---
source: src/regression_tests/format.rs
description: "z{\n/*nixfmt:disable*/\n}c"
---
z {
/*nixfmt:disable*/
}c
