src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_lone_enable_passes_through.snap
---
source: src/regression_tests/format.rs
description: "{\n  a   =   1;\n/*nixfmt:enable*/\n  b   =   2;\n}\n"
---
{
  a = 1;
  /*nixfmt:enable*/
  b = 2;
}
