src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_mid_line_demotes_to_line_comment.snap
---
source: src/regression_tests/format.rs
description: "{\n  a = 1; /*nixfmt:disable*/\n  b   =   2;\n}\n"
---
{
  a = 1; # nixfmt:disable
  b = 2;
}
