src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_region_crosses_brace.snap
---
source: src/regression_tests/format.rs
description: "{\n  foo   =   1;\n/*nixfmt:disable*/\n  bar    =    2;\n}\n"
---
{
  foo = 1;
/*nixfmt:disable*/
  bar    =    2;
}
