src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_directive_unclosed_in_interpolation_demoted.snap
---
source: src/regression_tests/format.rs
description: "{\nx =''/n\"${\n/*nixfmt:disable*/\n   2\n}\";\nv  '';\n}\n"
---
{
  x = ''
    /n"${
      /*nixfmt:disable*/
      2
    }";
    v  '';
}
