src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_indented_string_lone_interpolation_with_trailing_trivia-2.snap
---
source: src/regression_tests/format.rs
description: "''\n  ${ x\n  # multi\n  # line\n  }\n''\n"
---
''
  ${
    x
    # multi
    # line
  }
''
