src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_indented_string_lone_interpolation_with_trailing_trivia.snap
---
source: src/regression_tests/format.rs
description: "''\n${x\n# c\n}\n''\n"
---
''
  ${
    x
    # c
  }
''
