src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_interp_inline_short_forced_compact-2.snap
---
source: src/regression_tests/format.rs
description: "''\n  prefix ${lib.makeBinPath [ gdb ]} suffix\n''"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m''[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Break
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mprefix [0m[0;97;1m"[0m
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m${lib.makeBinPath[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m[[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mgdb[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m]}[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m suffix[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing
        [0;93;1m([0m Newlines [0;92;1m1[0m [0;93;1m)[0m
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m''[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
