src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_interp_inline_short_forced_compact.snap
---
source: src/regression_tests/format.rs
description: "''\n  wrap a/very/long/share/vscode/extensions/ms-vscode.cpptools/debug/bin/OpenDebugAD7 --prefix PATH : ${lib.makeBinPath [ gdb ]}\n''"
---
''
  wrap a/very/long/share/vscode/extensions/ms-vscode.cpptools/debug/bin/OpenDebugAD7 --prefix PATH : ${lib.makeBinPath [ gdb ]}
''
